...
            android:textAppearance="?attr/textAppearanceBodyLarge"
            android:textColor="?android:attr/textColorSecondary" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_task_content_description"
        app:srcCompat="@drawable/baseline_add_24" />
...
